fix images order on mobile

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -52,33 +52,33 @@
                 </p>
             </div>
             <div class="flex flex-col mt-8 items-center justify-center md:space-x-6 md:flex-row">
-                <div class="flex flex-col-reverse items-center justify-center md:flex-col md:w-1/3">
+                <div class="flex flex-col-reverse items-center justify-center md:w-1/3">
+                    <img src="{% static 'img/registrate.png' %}"
+                            alt="teacher"
+                            class="rounded-lg">
                     <div class="flex flex-col items-center justify-center">
-                        <img src="{% static 'img/registrate.png' %}"
-                             alt="teacher"
-                             class="rounded-lg">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Regístrate 📝</h3>
                         <p class="text-gray-600 text-center mt-4 px-4">
                             Regístrate en la plataforma para poder usar todas las funcionalidades de la misma.
                         </p>
                     </div>
                 </div>
-                <div class="flex flex-col items-center justify-center md:w-1/3">
+                <div class="flex flex-col-reverse items-center justify-center md:w-1/3">
+                    <img src="{% static 'img/profesores.png' %}"
+                            alt="teacher"
+                            class="rounded-lg">
                     <div class="flex flex-col items-center justify-center">
-                        <img src="{% static 'img/profesores.png' %}"
-                             alt="teacher"
-                             class="rounded-lg">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Cursos y Profesores 👨‍🏫</h3>
                         <p class="text-gray-600 text-center mt-4 px-4">
                             Busca algún profesor o curso que te interese ver su calificación o que quieras calificar.
                         </p>
                     </div>
                 </div>
-                <div class="flex flex-col items-center justify-center md:w-1/3">
+                <div class="flex flex-col-reverse items-center justify-center md:w-1/3">
+                    <img src="{% static 'img/confesiones.png' %}"
+                            alt="teacher"
+                            class="rounded-lg">
                     <div class="flex flex-col items-center justify-center">
-                        <img src="{% static 'img/confesiones.png' %}"
-                             alt="teacher"
-                             class="rounded-lg">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Confiésate ✝️<span class="p-2 ml-1 text-sm border-2 text-gray-500 border-green-500 rounded-lg">Coming Soon</span></h3>
                         <p class="text-gray-600 text-center mt-4 px-4">
                             Lee las confesiones de otros estudiantes, haz una confesión anónima o comenta.
