fixes closing tags & other minor issues

--- a/professors/templates/controls/professor_list_controls.html
+++ b/professors/templates/controls/professor_list_controls.html
@@ -45,7 +45,7 @@
             <input type="search"
                    name="search"
                    id="search-bar"
-                   class="border border-gray-300 rounded-md p-2 mx-auto w-11/12">
+                   class="border border-gray-300 rounded-md p-2 mx-auto w-11/12"/>
         </div>
     </div>
     <!-- Link to add new professors -->
