--- a/professors/templates/professor_list.html
+++ b/professors/templates/professor_list.html
@@ -23,7 +23,7 @@
                             <p class="font-bold text-gray-900">{{ professor.first_name }} {{ professor.last_name }}</p>
                             <img src="{% static 'img/upr_logo.jpg' %}"
                                  alt=""
-                                 class="w-5 h-5 rounded-full">
+                                 class="w-5 h-5 rounded-full"/>
                         </div>
                         <!-- diving line -->
                         <!-- body -->
@@ -36,6 +36,7 @@
                             </p>
                             <p>
                                 <span class="font-bold text-gray-700">Dificultad:</span> <span class="text-gray-600">{{ professor.difficulty }}</span>
+                            </p>
                             </div>
                         </a>
                     </div>
