--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,9 @@
     <head>
         {% load static %}
         {% load static tailwind_tags %}
+        <title>{% block title %}{% endblock %}</title>
+        <meta name="description" content="{% block description %}{% endblock %}" />
+        <meta name="keywords" content="{% block keywords %}{% endblock %}" />
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
