--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,15 +10,15 @@
     <div class="flex justify-center items-start">
         <!-- twitter -->
         <a href="https://twitter.com/jasiel_rt95" class="mx-2">
-            <img src="{% static 'img/twitter.png' %}" alt="twitter" class="w-6 h-6"/>   
+            <img src="{% static 'img/twitter.png' %}" alt="twitter" class="w-6 h-6" width="24px" height="24px"/>   
         </a>
         <!-- instagram -->
         <a href="https://www.instagram.com/jasiel_rt95/" class="mx-2">
-            <img src="{% static 'img/instagram.png' %}" alt="instagram" class="w-6 h-6"/>
+            <img src="{% static 'img/instagram.png' %}" alt="instagram" class="w-6 h-6" width="24px" height="24px"/>
         </a>
         <!-- linkedin -->
         <a href="https://www.linkedin.com/in/jasielrivera/" class="mx-2">
-            <img src="{% static 'img/linkedin.png' %}" alt="linkedin" class="w-6 h-6"/>
+            <img src="{% static 'img/linkedin.png' %}" alt="linkedin" class="w-6 h-6" width="24px" height="24px"/>
         </a>
     </div>
 </footer>
