--- a/courses/templates/controls/course_list_controls.html
+++ b/courses/templates/controls/course_list_controls.html
@@ -40,7 +40,7 @@
             <input type="search"
                    name="search"
                    id="search-bar"
-                   class="border border-gray-300 rounded-md p-2 mx-auto w-11/12">
+                   class="border border-gray-300 rounded-md p-2 mx-auto w-11/12"/>
         </div>
     </div>
 </section>
