--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -13,7 +13,7 @@
                 </a>
                 <img class="w-10 h-10 ml-2 rounded-full"
                      src="{% static 'img/upr_logo.jpg' %}"
-                     alt="University logo">
+                     alt="University logo" width="40px" height="40px"/>
             </div>
             <div class="flex flex-row items-center justify-center text-center">
                 <h2 class="text-lg font-bold text-gray-600">{{ course.name }} - {{ course.codification }}</h2>
@@ -24,7 +24,7 @@
             <div class="flex flex-row">
                 <div class="flex flex-col">
                     <h2 class="text-2xl font-bold text-gray-800 md:text-3xl">Estadísticas</h2>
-                    <hr class=" border-gray-300">
+                    <hr class=" border-gray-300"/>
                 </div>
                 {% if user.is_authenticated and not user_rated %}
                     <div class="flex flex-col ml-4">
@@ -76,7 +76,7 @@
             {% if not user_commented and user.is_authenticated %}
                 <button class="flex flex-row items-center justify-center ml-1 px-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500 text-lg font-bold text-white"
                         id="toggle-comment-form">
-                    <p class="">+</p>
+                    <p>+</p>
                 </button>
             {% endif %}
         </div>
@@ -92,7 +92,7 @@
                           cols="30"
                           rows="10"
                           class="md:w-3/4 p-2 rounded-md shadow-md border border-gray-200"></textarea>
-                <input type="hidden" name="course" value="{{ course.pk }}">
+                <input type="hidden" name="course" value="{{ course.pk }}"/>
                 <button type="submit"
                         id="submit-comment"
                         class="flex flex-row items-center justify-center px-2 mt-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500">
@@ -110,7 +110,7 @@
                                 <button class="flex flex-row items-center justify-center ml-1 px-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500 text-lg font-bold text-white"
                                         data-comment-id="{{ comment.pk }}"
                                         id="toggle-edit-comment-form">
-                                    <p class="">📝</p>
+                                    <p>📝</p>
                                 </button>
                             {% endif %}
                             <p class="font-bold text-gray-900">{{ comment.time_since_str }}</p>
