--- a/courses/templates/course_list.html
+++ b/courses/templates/course_list.html
@@ -27,7 +27,7 @@
                                 <span class="font-bold text-gray-700">Universidad:</span> <span class="text-gray-600">{{ course.college }}</span>
                                 <img src="{% static 'img/upr_logo.jpg' %}"
                                      alt=""
-                                     class="ml-1 w-5 h-5 rounded-full">
+                                     class="ml-1 w-5 h-5 rounded-full" width="20px" height="20px"/>
                             </p>
                             <p>
                                 <span class="font-bold text-gray-700">Departamento:</span> <span class="text-gray-600">{{ course.department }}</span>
@@ -42,6 +42,7 @@
                     </a>
                 </div>
             {% endfor %}
+        </div>
         </section>
     {% endblock %}
     {% block scripts %}
