--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -55,7 +55,7 @@
                 <div class="flex flex-col-reverse items-center justify-center md:w-1/3">
                     <img src="{% static 'img/registrate.png' %}"
                             alt="teacher"
-                            class="rounded-lg">
+                            class="rounded-lg"/>
                     <div class="flex flex-col items-center justify-center">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Regístrate 📝</h3>
                         <p class="text-gray-600 text-center mt-4 px-4">
@@ -66,7 +66,7 @@
                 <div class="flex flex-col-reverse items-center justify-center md:w-1/3">
                     <img src="{% static 'img/profesores.png' %}"
                             alt="teacher"
-                            class="rounded-lg">
+                            class="rounded-lg"/>
                     <div class="flex flex-col items-center justify-center">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Cursos y Profesores 👨‍🏫</h3>
                         <p class="text-gray-600 text-center mt-4 px-4">
@@ -77,7 +77,7 @@
                 <div class="flex flex-col-reverse items-center justify-center md:w-1/3">
                     <img src="{% static 'img/confesiones.png' %}"
                             alt="teacher"
-                            class="rounded-lg">
+                            class="rounded-lg"/>
                     <div class="flex flex-col items-center justify-center">
                         <h3 class="text-2xl font-bold text-indigo-600 mt-4">Confiésate ✝️<span class="p-2 ml-1 text-sm border-2 text-gray-500 border-green-500 rounded-lg">Coming Soon</span></h3>
                         <p class="text-gray-600 text-center mt-4 px-4">
@@ -168,5 +168,4 @@
         </div>
     </section>
     <!-- End Trending Confessions -->
-</div>
 {% endblock %}
