--- a/professors/templates/create_professor.html
+++ b/professors/templates/create_professor.html
@@ -11,7 +11,7 @@
             <h1 class="text-3xl font-bold text-gray-600 mt-4">Datos</h1>
             <!-- Login form -->
             <form action="{% url 'professors:create_professor' %}"
-                  method="POST"
+                  method="post"
                   class="flex flex-col items-center justify-center space-y-4 mt-4">
                 {% csrf_token %}
                 <div class="flex flex-col items-center justify-center space-y-2">
