--- a/reviews/templates/suggestions.html
+++ b/reviews/templates/suggestions.html
@@ -9,7 +9,7 @@
         </div>
         <div class="flex flex-col items-center justify-center  p-4">
             <form action="{% url 'reviews:suggestions' %}?next={{ next }}"
-                  method="POST"
+                  method="post"
                   class="flex flex-col items-center justify-center space-y-4 mt-4">
                 {% csrf_token %}
                 <div class="flex flex-col items-center justify-center space-y-2">
