--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <!-- centralized container -->
     <div class="container mt-8 py-12 mx-auto md:w-1/3 md:bg-gray-100 rounded-xl">
         <!-- Social Logins Section -->
         <div class="flex flex-col items-center justify-cente p-4">
@@ -11,7 +10,7 @@
                 <!-- Google Card -->
                 <div class="flex flex-col items-center justify-center bg-white rounded-xl shadow-xl p-4">
                     <a href="{% url 'social:begin' 'google-oauth2' %}?next={{ next }}" class="flex flex-row justify-center items-center space-x-2">
-                        <img src="{% static 'img/Google.png' %}" alt="google logo" class="w-8 h-8"/>
+                        <img src="{% static 'img/Google.png' %}" alt="google logo" class="w-8 h-8" width="38px" height="38px"/>
                         <h1 class="text-xl font-bold text-gray-600">Google</h1>
                     </a>
                 </div>
@@ -22,7 +21,7 @@
             <h1 class="text-3xl font-bold text-gray-600 mt-4">O logueate con tu email</h1>
             <!-- Login form -->
             <form action="{% url 'accounts:login' %}?next={{ next }}"
-                  method="POST"
+                  method="post"
                   class="flex flex-col items-center justify-center space-y-4 mt-4">
                 {% csrf_token %}
                 <div class="flex flex-col items-center justify-center space-y-2">
