--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
                 <!-- Google Card -->
                 <div class="flex flex-col items-center justify-center bg-white rounded-xl shadow-xl p-4">
                     <a href="{% url 'social:begin' 'google-oauth2' %}?next={{ next }}" class="flex flex-row justify-center items-center space-x-2">
-                        <img src="{% static 'img/Google.png' %}" alt="google logo" class="w-8 h-8"/>
+                        <img src="{% static 'img/Google.png' %}" alt="google logo" class="w-8 h-8" width="32px" height="32px"/>
                         <h1 class="text-xl font-bold text-gray-600">Google</h1>
                     </a>
                 </div>
@@ -22,7 +22,7 @@
             <h1 class="text-3xl font-bold text-gray-600 mt-4">O registrate con tu email</h1>
             <!-- Login form -->
             <form action="{% url 'accounts:register' %}?next={{ next }}"
-                  method="POST"
+                  method="post"
                   class="flex flex-col items-center justify-center space-y-4 mt-4">
                 {% csrf_token %}
                 <div class="flex flex-col items-center justify-center space-y-2">
