changed no stats message

--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -55,8 +55,7 @@
             </div>
             {% else %}
                 <div class="flex flex-col items-center justify-center">
-                    <h2 class="text-2xl font-bold text-gray-800">No hay estadísticas disponibles</h2>
-                    <p class="text-lg font-bold text-gray-600">Este profesor no tiene reseñas</p>
+                    <h2 class="text-lg font-bold text-gray-800">No hay estadísticas disponibles</h2>
                 </div>
             {% endif %}
         </div>
