--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -79,7 +79,7 @@
                             alt="teacher"
                             class="rounded-lg"/>
                     <div class="flex flex-col items-center justify-center">
-                        <h3 class="text-2xl font-bold text-indigo-600 mt-4">Confiésate ✝️<span class="p-2 ml-1 text-sm border-2 text-gray-500 border-green-500 rounded-lg">Coming Soon</span></h3>
+                        <h3 class="text-2xl font-bold text-indigo-600 mt-4">Confiésate ✝️</h3>
                         <p class="text-gray-600 text-center mt-4 px-4">
                             Lee las confesiones de otros estudiantes, haz una confesión anónima o comenta.
                         </p>
