--- a/reviews/templates/suggestions.html
+++ b/reviews/templates/suggestions.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load static %}
 {% block content %}
     <!-- centralized container -->
     <div class="container mt-8 py-12 mx-auto md:w-1/3 md:bg-gray-100 rounded-xl">
         <!-- Social Logins Section -->
         <div class="flex flex-col items-center justify-cente p-4">
-            <h1 class="text-3xl font-bold text-gray-600 mt-4">Sugerencía</h1>
+            <h1 class="text-3xl font-bold text-gray-600 mt-4">Sugerencia</h1>
         </div>
         <div class="flex flex-col items-center justify-center  p-4">
             <form action="{% url 'reviews:suggestions' %}?next={{ next }}"
@@ -13,7 +13,7 @@
                   class="flex flex-col items-center justify-center space-y-4 mt-4">
                 {% csrf_token %}
                 <div class="flex flex-col items-center justify-center space-y-2">
-                    <label for="suggestion" class="text-xl font-bold text-gray-600">Sugerencia</label>
+                    <label for="suggestion" class="text-xl font-bold text-gray-600">Añade Sugerencia</label>
                     <textarea name="suggestion"
                               id="suggestion"
                               cols="30"
@@ -35,4 +35,4 @@
             </form>
         </div>
     </div>
-{% endblock %}
+{% endblock content %}
