--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block head %}
     {% load static %}
-    {% block title %}<title>{{ profesor.first_name }}</title>{% endblock %}
-{% endblock %}
+    {% block title %}<title>{{ profesor.first_name }}</title>{% endblock title %}
+{% endblock head %}
 {% block content %}
     <!-- Professor details card -->
     <section class="flex flex-col items-center justify-center mt-12">
@@ -56,6 +56,7 @@
             {% else %}
                 <div class="flex flex-col items-center justify-center">
                     <h2 class="text-lg font-bold text-gray-800">No hay estadísticas disponibles</h2>
+                    <p class="text-gray-400 text-center">Escoge o añade un curso para calificar al profesor/a</p>
                 </div>
             {% endif %}
         </div>
@@ -209,9 +210,9 @@
             {% endif %}
         </div>
     </section>
-{% endblock %}
+{% endblock content %}
 {% block scripts %}
     <script>var csrftoken = '{{ csrf_token }}';</script>
     <script src="{% static 'js/professor.js' %}"></script>
     <script src="{% static 'js/likedislike.js' %}"></script>
-{% endblock %}
+{% endblock scripts %}
