--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block head %}
     {% load static %}
-{% endblock %}
+{% endblock head %}
 {% block content %}
     <!-- Professor details card -->
     <section class="flex flex-col items-center justify-center mt-12">
@@ -28,7 +28,7 @@
                 </div>
                 {% if user.is_authenticated and not user_rated %}
                     <div class="flex flex-col ml-4">
-                        <a href="{% url 'reviews:rate_course' pk=course.pk  %}"
+                        <a href="{% url 'reviews:rate_course' pk=course.pk %}"
                            class="flex flex-row items-center justify-center px-2 py-1 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500 text-lg font-bold text-white">
                             <p class="hidden md:block">Calificar 📝</p>
                             <p class="md:hidden">📝</p>
@@ -106,12 +106,12 @@
                 </button>
             </form>
         {% endif %}
-        <div class="flex flex-col justify-center items-center md:w-9/12">
+        <div class="flex flex-col justify-center items-center w-10/12 md:w-9/12">
             {% for comment in comments %}
-                <div class="flex flex-col my-6 w-3/4 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl">
+                <div class="flex flex-col my-6 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl w-full md:w-1/3">
                     <div class="flex justify-between">
-                        <p class="text-2xl font-bold text-gray-900">{{ comment.course }}</p>
-                        <div class="flex flex-row space-x-1">
+                        <p class="text-md font-bold text-gray-800">{{ comment.course }}</p>
+                        <div class="flex flex-col-reverse space-x-1 md:flex-row">
                             {% if comment.user == user %}
                                 <button class="flex flex-row items-center justify-center ml-1 px-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500 text-lg font-bold text-white"
                                         data-comment-id="{{ comment.pk }}"
@@ -119,13 +119,18 @@
                                     <p>📝</p>
                                 </button>
                             {% endif %}
-                            <p class="font-bold text-gray-900">{{ comment.time_since_str }}</p>
                         </div>
                     </div>
                     <div>
                         <p class="text-lg text-gray-800">{{ comment.text|linebreaksbr }}</p>
                     </div>
-                    <div class="flex justify-end items-end">
+                    <div class="flex justify-between items-center">
+                        <div class="flex flex-row">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <p class="text-md text-gray-800">{{ comment.time_since_str }}</p>
+                        </div>
                         {% if user.is_authenticated %}
                         <div class="flex flex-row items-center space-x-2">
                             <p class="text-lg font-bold text-gray-900">{{ comment.score }}</p>
@@ -191,9 +196,9 @@
             {% endif %}
         </div>
     </section>
-{% endblock %}
+{% endblock content %}
 {% block scripts %}
     <script>var csrftoken = '{{ csrf_token }}';</script>
     <script src="{% static 'js/course.js' %}"></script>
     <script src="{% static 'js/likedislike.js' %}"></script>
-{% endblock %}
+{% endblock scripts %}
