--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -13,7 +13,9 @@
             <!-- University logo -->
             <img class="w-10 h-10 ml-2 rounded-full"
                  src="{% static 'img/upr_logo.jpg' %}"
-                 alt="University logo"/>
+                 alt="University logo"
+                 height="40px"
+                 width="40px"/>
         </div>
         <!-- Average Statistics -->
         <div class="flex flex-col items-center justify-between w-9/12 md:w-1/2 p-4 mt-8 rounded-xl border border-gray-200 shadow-md">
@@ -160,50 +162,90 @@
                 Para poder comentar, selececiona un curso en específico.
             </p>
         </div>
-        <div class="flex flex-col justify-center items-center md:w-9/12">
+        <div class="flex flex-col justify-center items-center w-10/12 md:w-9/12">
             {% for comment in comments %}
-                <div class="flex flex-col my-6 w-3/4 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl">
+                <div class="flex flex-col my-6 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl w-full md:w-1/3">
                     <div class="flex justify-between">
-                        <p class="text-2xl font-bold text-gray-900">
-                            {{ comment.user }} - {{ comment.course }}
-                        </p>
-                        <p class=" font-bold text-gray-900">
-                            {{ comment.time_since_str }}
-                        </p>
+                        <p class="text-md font-bold text-gray-800">{{ comment.course }}</p>
+                        <div class="flex flex-col-reverse space-x-1 md:flex-row">
+                            {% if comment.user == user %}
+                                <button class="flex flex-row items-center justify-center ml-1 px-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500 text-lg font-bold text-white"
+                                        data-comment-id="{{ comment.pk }}"
+                                        id="toggle-edit-comment-form">
+                                    <p>📝</p>
+                                </button>
+                            {% endif %}
+                        </div>
                     </div>
                     <div>
-                        <p class="text-lg text-gray-800">
-                            {{ comment.text }}
-                        </p>
+                        <p class="text-lg text-gray-800">{{ comment.text|linebreaksbr }}</p>
                     </div>
-                    <div class="flex justify-end items-end">
-                        <p>
-                            {{ comment.score }}
-                        </p>
-                        <button class="flex flex-row items-center like-button"
-                                data-comment-id="{{ comment.pk }}">
+                    <div class="flex justify-between items-center">
+                        <div class="flex flex-row">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <p class="text-md text-gray-800">{{ comment.time_since_str }}</p>
+                        </div>
+                        {% if user.is_authenticated %}
+                        <div class="flex flex-row items-center space-x-2">
+                            <p class="text-lg font-bold text-gray-900">{{ comment.score }}</p>
+                            <button class="flex flex-row items-center like-button"
+                                    data-comment-id="{{ comment.pk }}">
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 20 20"
+                                    fill="currentColor"
+                                    class="w-5 h-5">
+                                    <path fill-rule="evenodd" d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z" clip-rule="evenodd" />
+                                </svg>
+                            </button>
+                            <button class="flex flex-row items-center ml-1 dislike-button"
+                                    data-comment-id="{{ comment.pk }}">
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 20 20"
+                                    fill="currentColor"
+                                    class="w-5 h-5">
+                                    <path fill-rule="evenodd" d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z" clip-rule="evenodd" />
+                                </svg>
+                            </button>
+                        </div>
+                        {% else %}
+                        <div class="flex flex-row items-center">
+                            <p class="text-lg font-bold text-gray-900">{{ comment.score }}</p>
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 20 20"
                                  fill="currentColor"
                                  class="w-5 h-5">
                                 <path fill-rule="evenodd" d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z" clip-rule="evenodd" />
                             </svg>
-                        </button>
-                        <button class="flex flex-row items-center ml-1 dislike-button"
-                                data-comment-id="{{ comment.pk }}">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                                 viewBox="0 0 20 20"
-                                 fill="currentColor"
-                                 class="w-5 h-5">
-                                <path fill-rule="evenodd" d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z" clip-rule="evenodd" />
-                            </svg>
-                        </button>
+                        </div>
+                        {% endif %}
                     </div>
+                    {% if comment.user == user %}
+                        <form action="{% url 'comments:comment_edit' comment.pk %}"
+                              method="post"
+                              class="hidden flex-col justify-center items-center mt-4"
+                              id="edit-comment-form">
+                            {% csrf_token %}
+                            <label for="comment" class="sr-only">Comentario</label>
+                            <textarea name="text"
+                                      id="edit-comment-text"
+                                      cols="30"
+                                      rows="10"
+                                      class="w-full p-2 rounded-md shadow-md border border-gray-200"
+                                      value>{{comment.text}}</textarea>
+                            <button type="submit"
+                                    id="submit-comment"
+                                    class="flex flex-row items-center justify-center px-2 mt-2 rounded-md shadow-md border border-gray-200 bg-indigo-600 hover:bg-indigo-500">
+                                <p class="text-lg font-bold text-white">editar</p>
+                            </button>
+                        </form>
+                    {% endif %}
                 </div>
             {% endfor %}
             {% if comments|length == 0 %}
-                <div class="flex flex-col justify-center items-center my-8">
-                    <p class="text-gray-400 text-center">
+                <div class="flex flex-col justify-center items-center w-3/4">
+                    <p class="text-gray-400 text-center mt-12">
                         No hay comentarios disponibles
                     </p>
                 </div>
@@ -213,6 +255,7 @@
 {% endblock content %}
 {% block scripts %}
     <script>var csrftoken = '{{ csrf_token }}';</script>
+    <script src="{% static 'js/edit-comment.js' %}"></script>
     <script src="{% static 'js/professor.js' %}"></script>
     <script src="{% static 'js/likedislike.js' %}"></script>
 {% endblock scripts %}
