--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,7 @@
             <div class="flex flex-row justify-center items-center">
                 <div>
                     <a href="{% url 'home:index' %}">
-                        <img src="{% static 'img/logo.svg' %}" alt="logo" class="mx-4 md:mx-0"/>
+                        <img src="{% static 'img/logo.svg' %}" alt="logo" class="mx-4 md:mx-0" height="" width=""/>
                     </a>
                 </div>
                 <div>
@@ -15,7 +15,7 @@
             </div>
             <!-- links section -->
             <div class="hidden flex-row items-center space-x-4 md:flex md:text-2xl">
-                <a href="{% url 'home:index' %}" class="hover:text-indigo-300">Home</a>
+                <a href="{% url 'home:profile' %}" class="hover:text-indigo-300">Home</a>
                 <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
                 <a href="{% url 'professors:all_professors' %}"
                    class="hover:text-indigo-300">Profesores</a>
@@ -40,7 +40,7 @@
         <!-- mobile menu -->
         <div class="hidden p-3 md:hidden" id="mobile-menu">
             <div class="flex flex-col items-center space-y-4 text-xl bg-gray-50 bg-blur rounded-lg text-gray-700">
-                <a href="{% url 'home:index' %}" class="hover:text-indigo-300">Home</a>
+                <a href="{% url 'home:profile' %}" class="hover:text-indigo-300">Home</a>
                 <a href="{% url 'courses:all_courses' %}" class="hover:text-indigo-300">Cursos</a>
                 <a href="{% url 'professors:all_professors' %}"
                    class="hover:text-indigo-300">Profesores</a>
@@ -60,7 +60,7 @@
             <div class="flex flex-row justify-center items-center">
                 <div>
                     <a href="{% url 'home:index' %}">
-                        <img src="{% static 'img/logo.svg' %}" alt="logo" class="mx-4 md:mx-0"/>
+                        <img src="{% static 'img/logo.svg' %}" alt="logo" class="mx-4 md:mx-0" width="" height=""/>
                     </a>
                 </div>
                 <div>
