--- a/courses/templates/course_list.html
+++ b/courses/templates/course_list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
     {% load static %}
+{% block title %}<title>Cursos - University Hub</title>{% endblock title %}
 {% endblock head %}
 {% block controls %}
     {% include "controls/course_list_controls.html" %}
