--- a/home/templates/profile.html
+++ b/home/templates/profile.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-{% load static %}
+{% block head %}
+    {% load static %}
+{% block title %}<title>{{ user.username }}</title>{% endblock title %}
+{% endblock head %}
 {% block content %}
 <div class="flex flex-col justify-center items-center mt-12">
     <h1 class="text-4xl font-bold text-gray-800">Perfil</h1>
