--- a/professors/templates/create_professor.html
+++ b/professors/templates/create_professor.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-{% load static %}
+{% block head %}
+    {% load static %}
+{% block title %}<title>Añadir Profesor</title>{% endblock title %}
+{% endblock head %}
 {% block content %}
     <!-- centralized container -->
     <div class="container mt-8 py-12 mx-auto md:w-1/3 md:bg-gray-100 rounded-xl">
