--- a/reviews/templates/course_review.html
+++ b/reviews/templates/course_review.html
@@ -1,5 +1,8 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends "base.html" %}
+{% block head %}
+    {% load static %}
+{% block title %}<title>Calificar</title>{% endblock title %}
+{% endblock head %}
 {% block content %}
     <!-- centralized container -->
     <div class="container mt-8 py-12 mx-auto md:w-1/3 md:bg-gray-100 rounded-xl">
@@ -91,4 +94,4 @@
             </form>
         </div>
     </div>
-{% endblock %}
+{% endblock content %}
