--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,8 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends "base.html" %}
+{% block head %}
+    {% load static %}
+{% block title %}<title>Logueate' - University Hub</title>{% endblock title %}
+{% endblock head %}
 {% block content %}
     <div class="container mt-8 py-12 mx-auto md:w-1/3 md:bg-gray-100 rounded-xl">
         <!-- Social Logins Section -->
@@ -53,5 +56,4 @@
                 {% endif %}
             </form>
         </div>
-    </div>
-{% endblock %}
+{% endblock content %}
