--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
         {% load static %}
         {% load static tailwind_tags %}
         {% block title %} {% endblock title %}
-        <!-- <title></> -->
+        <!-- <title><title/> -->
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
