--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
         {% tailwind_css %}
         {% block head %}
         {% endblock head %}
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     </head>
     <body class="flex flex-col min-h-screen">
         {% include "navbar.html" %}
