--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,11 +6,8 @@
             <div class="flex flex-row justify-center items-center">
                 <div>
                     <a href="{% url 'home:index' %}">
-                        <img src="{% static 'img/logo.svg' %}" alt="logo" class="mx-4 md:mx-0" height="" width=""/>
+                        <img src="{% static 'img/logo.png' %}" alt="logo" class="mx-4 md:mx-0" height="40px" width="40px"/>
                     </a>
-                </div>
-                <div>
-                    <h1 class="hidden text-black md:block md:text-2xl">University Hub</h1>
                 </div>
             </div>
             <!-- links section -->
@@ -60,7 +57,7 @@
             <div class="flex flex-row justify-center items-center">
                 <div>
                     <a href="{% url 'home:index' %}">
-                        <img src="{% static 'img/logo.svg' %}" alt="logo" class="mx-4 md:mx-0" width="" height=""/>
+                        <img src="{% static 'img/logo.png' %}" alt="logo" class="mx-4 md:mx-0" width="50px" height="50px"/>
                     </a>
                 </div>
                 <div>
