--- a/professors/templates/professor.html
+++ b/professors/templates/professor.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             {% else %}
-                <div class="flex flex-col items-center justify-center">
+                <div class="flex flex-col items-center justify-center text-center">
                     <h2 class="text-lg font-bold text-gray-800">No hay estadísticas disponibles</h2>
                     <p class="text-gray-400 text-center">Escoge o añade un curso para calificar al profesor/a</p>
                 </div>
