--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
     {% load static %}
-{% block title %}<title>Logueate' - University Hub</title>{% endblock title %}
+{% block title %}<title>Logueate' - ProfeRank</title>{% endblock title %}
 {% endblock head %}
 {% block content %}
     <div class="container mt-8 py-12 mx-auto md:w-1/3 md:bg-gray-100 rounded-xl">
@@ -44,8 +44,9 @@
                 <div class="flex flex-col items-center justify-center space-y-2">
                     <input type="submit"
                            value="Ingresar"
-                           class="w-96 h-10 rounded-xl bg-indigo-600 text-white font-bold text-xl"/>
+                           class="w-96 h-10 rounded-xl bg-indigo-600 text-white font-bold text-xl hover:cursor-pointer"/>
                 </div>
+                <p class="text-gray-600">¿No tienes cuenta? <a href="{% url 'accounts:register' %}?next={{ next }}" class="text-indigo-600">Registrate</a></p>
                 <!-- Error Message -->
                 {% if error %}
                     <div class="flex flex-col items-center justify-center space-y-2">
