--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
     {% load static %}
-{% block title %}<title>Regístrate - University Hub</title>{% endblock title %}
+{% block title %}<title>Regístrate - ProfeRank</title>{% endblock title %}
 {% endblock head %}
 {% block content %}
     <!-- centralized container -->
@@ -58,8 +58,9 @@
                     <div class="flex flex-col items-center justify-center space-y-2">
                         <input type="submit"
                                value="Registrarse"
-                               class="w-96 h-10 rounded-xl bg-indigo-600 text-white font-bold text-xl"/>
+                               class="w-96 h-10 rounded-xl bg-indigo-600 text-white font-bold text-xl hover:cursor-pointer"/>
                     </div>
+                    <p class="text-gray-600">¿Ya tienes una cuenta? <a href="{% url 'accounts:login' %}?next={{ next }}" class="text-indigo-600">Inicia sesión</a></p>
                     <!-- Error Message -->
                     {% if error %}
                         <div class="flex flex-col items-center justify-center space-y-2">
