--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
     {% load static %}
-    {% block title %}<title>University Hub</title>{% endblock title %}
+    {% block title %}<title>ProfeRank</title>{% endblock title %}
 {% endblock head %}
 {% block content %}
     <!-- Hero section -->
@@ -12,7 +12,7 @@
                 <div class="text-4xl font-bold text-gray-800">
                     <h1>
                         <span class="hidden md:block">Bienvenid@ a</span>
-                        <span class="block text-indigo-600 text">University Hub</span>
+                        <span class="block text-indigo-600 text">ProfeRank</span>
                     </h1>
                 </div>
                 <!-- description -->
@@ -45,13 +45,13 @@
         </div>
     </section>
     <!-- End Hero section -->
-    <!-- Que es University Hub? -->
+    <!-- Que es ProfeRank? -->
     <section class="bg-gray-100 mt-4 md:text-2xl">
         <div class="container mx-auto py-20">
             <div class="flex flex-col items-center">
-                <h2 class="text-2xl font-bold text-indigo-600 md:text-4xl">¿Qué es University Hub?</h2>
+                <h2 class="text-2xl font-bold text-indigo-600 md:text-4xl">¿Qué es ProfeRank?</h2>
                 <p class="text-gray-600 text-center mt-4 px-4">
-                    University Hub es una plataforma en la que puedes calificar a tus profesores en base a los cursos que has tomado con ellos. Además, puedes hacer y ver confesiones anónimas de otros estudiantes.
+                    ProfeRank es una plataforma en la que puedes calificar a tus profesores en base a los cursos que has tomado con ellos. Además, puedes hacer y ver confesiones anónimas de otros estudiantes.
                 </p>
             </div>
             <div class="flex flex-col mt-8 items-center justify-center md:space-x-6 md:flex-row">
