--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="title" content="University Hub"/>
+        <meta name="title" content="ProfeRank"/>
         <meta name="description" content="El mejor lugar para eligir tus cursos con los mejores profesores!"/>
         <meta name="keywords" content="UPR, Inter, UAGM"/>
         <meta name="robots" content="index, follow"/>
