--- a/home/templates/profile.html
+++ b/home/templates/profile.html
@@ -7,12 +7,12 @@
 <div class="flex flex-col justify-center items-center mt-12">
     <h1 class="text-4xl font-bold text-gray-800">Perfil</h1>
     <div class="flex flex-row">
-        <p class="text-lg text-gray-800">Upvote count: {{ total_upvotes }}</p>
-        <p class="text-lg text-gray-800 ml-4">Downvote count: {{ total_downvotes }}</p>
+        <p class="text-lg text-gray-800">Cantidad de likes: {{ total_upvotes }}</p>
+        <p class="text-lg text-gray-800 ml-4">Cantidad de dislikes: {{ total_downvotes }}</p>
     </div>
 </div>
 <div class="flex flex-col justify-center items-center mt-12">
-    <h1 class="text-4xl font-bold text-gray-800">Comentarios</h1>
+    <h1 class="text-4xl font-bold text-gray-800">Tus comentarios</h1>
     {% for comment in comments %}
                 <div class="flex flex-col my-6 space-y-4 p-4 border border-gray-200 shadow-md rounded-xl w-11/12 md:w-1/3">
                     <div class="flex justify-between">
