--- a/professors/templates/professor_list.html
+++ b/professors/templates/professor_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
     {% load static %}
-{% block title %}<title>Profesores - University Hub</title>{% endblock title %}
+{% block title %}<title>Profesores - ProfeRank</title>{% endblock title %}
 {% endblock head %}
 {% block controls %}
     {% include "controls/professor_list_controls.html" %}
